@@ -15,25 +15,12 @@ SRC_URI="mirror://pypi/${MY_P:0:1}/${MY_PN}/${MY_P}.tar.gz"
 
 SLOT="0"
 LICENSE="PSF-2"
-KEYWORDS="~alpha ~amd64 ~arm ~arm64"
+KEYWORDS="~alpha ~amd64 ~arm ~arm64 ~x86"
 
-RDEPEND=""
-BDEPEND=""
+DEPEND=""
+# there are some deps in setup.cfg for extras testing that might be added.
 
 S="${WORKDIR}/${MY_P}"
 
 distutils_enable_tests pytest
 distutils_enable_sphinx docs
-
-#EPYTEST_DESELECT=(
-#	# this test fails if importlib-metadata returns more than one
-#	# entry, i.e. when keyring is installed already
-#	tests/test_packaging.py::test_entry_point
-#)
-#
-#EPYTEST_IGNORE=(
-#	# apparently does not unlock the keyring properly
-#	tests/backends/test_libsecret.py
-#	# hangs
-#	tests/backends/test_kwallet.py
-#)
